--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             const paginasPorData = {
                 "08/03/2008": "home.html",
                 "10/04/2010": "Rafa.html",
-                "25/12/2005": "pagina3.html",
+                "17/07/2007": "Maria.html",
                 "01/01/2001": "pagina4.html",
             };
 
